tests/toy/neg/001174_mutation.toylang
program a = { 0 a do sleep; } .
